--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <div id="brandPresentation">
             <h1 class="glowText">Optical Labs Docs</h1>
-            <p>Technical documentation and resources for Optical Labs' APIs, games, and other digital services.</p>
+            <p>Technical documentation and resources for Optical Labs' services.</p>
         </div>
         
         <hr class="default-hr">
