--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <main>
         <div id="brandPresentation">
             <h1 class="glowText">Optical Labs Docs</h1>
-            <p>Technical documentation and resources for Optical Labs' services.</p>
+            <p>Technical documentation and resources for Optical Labs services</p>
         </div>
         
         <hr class="default-hr">
 
         <div class="productsGrid">
-            <a href="/prism/" class="card prism">
+            <a href="/prism/" class="card">
                 <div class="card-header">
                     <img src="/images/prism/prism logo.webp" alt="Prism Logo" class="card-icon-img">
                     <h3>Prism</h3>
