--- a/prism/index.html
+++ b/prism/index.html
@@ -17,7 +17,7 @@
     <title>Prism Docs | Optical Labs</title>
 
     <meta name="description" content="Optical Labs Documentation - Prism API">
-    <link rel="icon" href="/images/optical labs logo 50.webp" type="image/x-icon">
+    <link rel="icon" href="/images/prism/prism logo.webp" type="image/x-icon">
 </head>
 
 
