better content display

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body class="stripedBg">
 
-    <main>
+    <main id="documentationMain">
         <div id="brandPresentation">
             <h1 class="glowText">Optical Labs Docs</h1>
             <p>Technical documentation and resources for Optical Labs services</p>
@@ -44,6 +44,8 @@
             
         </div>
     </main>
+
+    <script src="/js/main.js"></script>
     
 </body>
 
