prism docs update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main id="documentationMain">
         <div id="brandPresentation">
             <h1 class="glowText">Optical Labs Docs</h1>
-            <p>Technical documentation and resources for Optical Labs services</p>
+            <p>Technical documentation and official resources for Optical Labs services</p>
         </div>
         
         <hr class="default-hr">
@@ -38,8 +38,8 @@
                     <img src="/images/prism/prism logo.webp" alt="Prism Logo" class="card-icon-img">
                     <h3>Prism</h3>
                 </div>
-                <p>A high-efficiency multi-purpose API, engineered for easy integration and low-latency.</p>
-                <div class="arrow">Read Docs →</div>
+                <p>A highly efficient multi-purpose API, engineered for easy integration and low-latency.</p>
+                <div class="arrow">Read Docs</div>
             </a>
             
         </div>
