--- a/prism/index.html
+++ b/prism/index.html
@@ -55,6 +55,7 @@
                 <a href="#endpoints">Endpoints</a>
                 <a href="#profanity-censor">Profanity Censor</a>
                 <a href="#link-preview">Link Preview</a>
+                <a href="#og-image-generation">OG Image Generation</a>
             </div>
         </div>
     </header>
@@ -268,9 +269,18 @@
             <h1>Endpoints</h1>
 
             <h2 id="profanity-censor">Profanity Censor</h2>
+            <p>Documentation coming soon.</p>
+
             <br>
 
             <h2 id="link-preview">Link Preview</h2>
+            <p>Documentation coming soon.</p>
+
+            <br>
+
+            <h2 id="og-image-generation">OG Image Generation</h2>
+            <p>Documentation coming soon.</p>
+
             </section>
 
     </main>
