smooth url scroll

--- a/prism/profanity-censor/index.html
+++ b/prism/profanity-censor/index.html
@@ -47,7 +47,7 @@
 
             <div class="contentTableCategory">
                 <a href="#examples">Examples</a>
-                <a href="#simplest-example">Simplest Usage</a>
+                <a href="#minimum-example">Minimim Usage</a>
                 <a href="#strictness-level-example">Strictness Level</a>
                 <a href="#mask-style-example">Mask Style</a>
                 <a href="#custom-lists-example">Custom Lists</a>
@@ -92,7 +92,7 @@
         <section class="doc-section" id="examples">
             <h1>Examples</h1>
 
-            <h2 id="simplest-example">Simplest Usage</h2>
+            <h2 id="minimum-example">Minimum Usage</h2>
             <p>Assuming that the word "bad" is a profanity:</p>
             <script>
                 addJSONCodeBlock('Request Body', {
