--- a/prism/index.html
+++ b/prism/index.html
@@ -65,6 +65,13 @@
 
     <main id="docs-main">
 
+        <div id="docs-title-div">
+            <h1>Documentation:</h1>
+            <h1>Prism API</h1>
+        </div>
+
+        <hr class="default-hr">
+
         <section class="doc-section" id="introduction">
             <h1>Introduction</h1>
 
