--- a/prism/profanity-censor/index.html
+++ b/prism/profanity-censor/index.html
@@ -66,6 +66,13 @@
 
     <main id="docs-main">
 
+        <div id="docs-title-div">
+            <h1>Prism Endpoint:</h1>
+            <h1>Profanity Censor</h1>
+        </div>
+
+        <hr class="default-hr">
+
         <section class="doc-section" id="usage">
             <h1>Usage</h1>
 
