profanity censor examples

--- a/prism/index.html
+++ b/prism/index.html
@@ -57,6 +57,10 @@
                 <a href="#link-preview">Link Preview</a>
                 <a href="#og-image-generation">OG Image Generation</a>
             </div>
+
+            <div class="contentTableCategory">
+                <a href="/">Leave</a>
+            </div>
         </div>
     </header>
 
