--- a/prism/profanity-censor/index.html
+++ b/prism/profanity-censor/index.html
@@ -47,7 +47,7 @@
 
             <div class="contentTableCategory">
                 <a href="#examples">Examples</a>
-                <a href="#minimum-example">Minimim Usage</a>
+                <a href="#basic-example">Basic Request</a>
                 <a href="#strictness-level-example">Strictness Level</a>
                 <a href="#mask-style-example">Mask Style</a>
                 <a href="#custom-lists-example">Custom Lists</a>
@@ -77,6 +77,7 @@
             <h1>Usage</h1>
 
             <h2 id="description">Description</h2>
+            <p>With Prism's profanity censor endpoint, you can</p>
 
             <br>
 
@@ -101,7 +102,7 @@
 
             <p>Don't forget that results are always wrapped in a <a href="../#response-structure">response wrapper</a>!</p>
 
-            <h2 id="minimum-example">Minimum Usage</h2>
+            <h2 id="basic-example">Basic Request</h2>
             <p>Assuming that the word "bad" is a profanity:</p>
             <script>
                 addJSONCodeBlock('Request Body', {
