small text change

--- a/prism/index.html
+++ b/prism/index.html
@@ -317,7 +317,7 @@
             <h1>Endpoints</h1>
 
             <h2 id="profanity-censor">Profanity Censor</h2>
-            <p>The profanity censor endpoint lets you input a text, and returns a censored version of the original text. Multiple optional personalization options available like a strictness level, censor style, a custom list of blacklisted words, and a custom list of whitelisted words.</p>
+            <p>The profanity censor endpoint lets you input a text, and then returns a censored version of the original text. Multiple optional personalization options are available like a strictness level, censor style, a custom list of blacklisted words, and a custom list of whitelisted words.</p>
             <a href="./profanity-censor/" class="sub-page-btn">See documentation</a>
 
             <br>
