--- a/prism/profanity-censor/index.html
+++ b/prism/profanity-censor/index.html
@@ -153,7 +153,7 @@
                     "mask_style": "comic"
                 });
             </script>
-            <p>Profanity are censored differently:</p>
+            <p>Profanity is now censored differently:</p>
             <script>
                 addJSONCodeBlock('Unwrapped Result', {
                     "censored_text": "This sentence contains a $#! word.",
