changed price name & endpoint text

--- a/prism/index.html
+++ b/prism/index.html
@@ -248,7 +248,7 @@
                             <td>$0.001</td>
                         </tr>
                         <tr>
-                            <td>Startup</td>
+                            <td>Venture</td>
                             <td>20,000</td>
                             <td>$14.99</td>
                             <td>$0.00075</td>
