--- a/prism/index.html
+++ b/prism/index.html
@@ -222,6 +222,8 @@
 
             <p>Credits are deducted from your balance immediately upon a successful request. If the request returns an error, the credits will be refunded for that request in the majority of cases. You only pay for successful results.</p>
 
+            <p style="font-size: 2em;">To buy credits, visit <a href="https://optical-labs.ca/prism/pricing/" target="_blank">this page</a>.</p>
+
             <!-- credit prices -->
             <h3>Credit Packs:</h3>
             <div class="table-wrapper">
