link preview documentation

--- a/prism/index.html
+++ b/prism/index.html
@@ -298,7 +298,7 @@
                         <tr>
                             <td>Link Preview</td>
                             <td>1 credit</td>
-                            <td>Retrieve various content from a url.</td>
+                            <td>Retrieve various content from a URL.</td>
                         </tr>
                         <tr>
                             <td>OG Image Generation</td>
@@ -326,7 +326,8 @@
             <br>
 
             <h2 id="link-preview">Link Preview</h2>
-            <p>Endpoint not available yet.</p>
+            <p>The link preview endpoint allows you to easily extract a URL's metadata like its title, description, and cover image to help you generate rich link previews.</p>
+            <a href="./link-preview/" class="sub-page-btn">See documentation</a>
 
             <br>
             <br>
