--- a/prism/profanity-censor/index.html
+++ b/prism/profanity-censor/index.html
@@ -46,6 +46,12 @@
             </div>
 
             <div class="contentTableCategory">
+                <a href="#interactive-preview">Interactive Preview</a>
+                <a href="#preview-form">Form</a>
+                <a href="#live-response">Response</a>
+            </div>
+
+            <div class="contentTableCategory">
                 <a href="#examples">Examples</a>
                 <a href="#basic-example">Basic Request</a>
                 <a href="#strictness-level-example">Strictness Level</a>
@@ -162,6 +168,27 @@
                         }
                     }
                 });
+            </script>
+            
+
+        </section>
+
+
+        <hr class="default-hr extra-hr">
+
+
+        <section class="doc-section" id="interactive-preview">
+            <h1>Interactive Preview</h1>
+            <p>Send a real request to the endpoint for free, directly from your browser!</p>
+
+            <script>
+                addInteractivePreview("text/profanity", [
+                    { type: "text", label: `Text<span class="mandatory">*</span>`, id: "profanity-text", key: "text", placeholder: "Type a sentence with a bad word", required: true},
+                    { type: "dropdown", label: "Strictness", id: "profanity-strictness", key: "strictness", options: [{ label: "1 (Low)", value: 1 }, { label: "2 (Medium)", value: 2, selected: true }, { label: "3 (High)", value: 3 }]},
+                    { type: "dropdown", label: "Mask Style", id: "profanity-mask", key: "mask_style", options: [{ label: "Full", value: "full", selected: true }, { label: "Partial", value: "partial" }, { label: "Vowels", value: "vowels" }, { label: "Redact", value: "redact" }, { label: "Comic", value: "comic" }]},
+                    { type: "array", label: "Blacklist", id: "profanity-blacklist", key: "blacklist" },
+                    { type: "array", label: "Whitelist", id: "profanity-whitelist", key: "whitelist" }
+                ]);
             </script>
 
         </section>
