documentation url in responses

--- a/prism/index.html
+++ b/prism/index.html
@@ -145,7 +145,8 @@
                         result: {
                             "<endpoint_specific_schema>": "This object varies depending on the endpoint."
                         }
-                    }
+                    },
+                    documentation: "https://docs.optical-labs.ca/prism/"
                 });
             </script>
 
@@ -160,7 +161,8 @@
                             used_credits: 0,
                             remaining_credits: 12345
                         }
-                    }
+                    },
+                    documentation: "https://docs.optical-labs.ca/prism/"
                 });
             </script>
 
