--- a/prism/link-preview/index.html
+++ b/prism/link-preview/index.html
@@ -142,7 +142,8 @@
                             "image": "https://www.youtube.com/img/desktop/yt_1200.png",
                             "icon": "https://www.youtube.com/s/desktop/2a7df5b3/img/favicon.ico"
                         }
-                    }
+                    },
+                    documentation: "https://docs.optical-labs.ca/prism/"
                 });
             </script>
 
