--- a/prism/profanity-censor/index.html
+++ b/prism/profanity-censor/index.html
@@ -166,7 +166,8 @@
                             "blacklist": [],
                             "whitelist": []
                         }
-                    }
+                    },
+                    documentation: "https://docs.optical-labs.ca/prism/"
                 });
             </script>
             
